Image editor paint icon missing until enter weight paint #25649

Closed
opened 2011-01-15 08:59:23 +01:00 by Danny McGrath · 22 comments
Member

%%%I am using Ubuntu 10.10 64b r34328.

The problem is that the preview icon for the image editor for the paint brush, are missing. At least until I caused the 3D display to enter a paint mode (weight paint in this case), which displays the icons. The result is that the icons start showing up in the image editor (see attached images).%%%

%%%I am using Ubuntu 10.10 64b r34328. The problem is that the preview icon for the image editor for the paint brush, are missing. At least until I caused the 3D display to enter a paint mode (weight paint in this case), which displays the icons. The result is that the icons start showing up in the image editor (see attached images).%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Nicholas, do you have time to investigate this? You worked on better display for icons before...%%%

%%%Nicholas, do you have time to investigate this? You worked on better display for icons before...%%%

%%%Fixed in trunk.%%%

%%%Fixed in trunk.%%%
Author
Member

%%%hmm, seems like its still broken in latest SVN. I attached a blend showing the problem now.

Basically, if you add a texture, the thumbnail for the default clouds preview thumbnail is generated. The problem is that if you change the texture type to magic, lets say, the brush preview doesn't update (although it seems the brush itself in sculpt uses the right brush). Also, if you create the texture from the texture panel instead of via the tool shelf, the preview thumbnail doesn't get generated at all, and stays empty.%%%

%%%hmm, seems like its still broken in latest SVN. I attached a blend showing the problem now. Basically, if you add a texture, the thumbnail for the default clouds preview thumbnail is generated. The problem is that if you change the texture type to magic, lets say, the brush preview doesn't update (although it seems the brush itself in sculpt uses the right brush). Also, if you create the texture from the texture panel instead of via the tool shelf, the preview thumbnail doesn't get generated at all, and stays empty.%%%

%%%Thanks, reopened. Thought you meant an entirely different problem, but this is indeed still a bug :)%%%

%%%Thanks, reopened. Thought you meant an entirely different problem, but this is indeed still a bug :)%%%

%%%OK, brush texture should get regenerated now. Marking fixed again.%%%

%%%OK, brush texture should get regenerated now. Marking fixed again.%%%
Author
Member

%%%Not to be a pest or anything (hehe), but now I noticed that my tiny preview icons of the current texture, in the texture panel, are missing again (they only started working for me a few days ago). Im guessing this is a bug again?

I also attached a screenshot "Missing icons 3.png" to this report. Lemmie know if you need anything else.%%%

%%%Not to be a pest or anything (hehe), but now I noticed that my tiny preview icons of the current texture, in the texture panel, are missing again (they only started working for me a few days ago). Im guessing this is a bug again? I also attached a screenshot "Missing icons 3.png" to this report. Lemmie know if you need anything else.%%%
Author
Member

%%%Okay, it seems that this bug is back again, possibly since #25720 fixed the broken mini thumbnails that I reported above.

I mentioned the problem to Ton on irc, so I think he is at least looking into the problem.

In the meantime, I will also attach a screenshot to confirm, to this post. I will also reply back here if the matter is resolved (assuming Ton doesn't comment here first, of course).

%%%

%%%Okay, it seems that this bug is back again, possibly since #25720 fixed the broken mini thumbnails that I reported above. I mentioned the problem to Ton on irc, so I think he is at least looking into the problem. In the meantime, I will also attach a screenshot to confirm, to this post. I will also reply back here if the matter is resolved (assuming Ton doesn't comment here first, of course). %%%
Member

%%%I reopen this report, I suggest Nicholas should consult me first before working more here :)%%%

%%%I reopen this report, I suggest Nicholas should consult me first before working more here :)%%%

%%%Any update here?%%%

%%%Any update here?%%%

%%%Sergey - my original fix for this bug was completely wrong, but I haven't looked into it since then.%%%

%%%Sergey - my original fix for this bug was completely wrong, but I haven't looked into it since then.%%%

%%%ubuntu 11.04 64bits rev43524

I can't reproduce initial bug about brushes preview icons in UV editor.

About little preview icons in texture panel, I noticed that texture panel have no list template for brushes.
Tiny texture icons seem to be created for these lists.

%%%

%%%ubuntu 11.04 64bits rev43524 I can't reproduce initial bug about brushes preview icons in UV editor. About little preview icons in texture panel, I noticed that texture panel have no list template for brushes. Tiny texture icons seem to be created for these lists. %%%

%%%Unassigning self, following UI code makes my head hurt too much :)%%%

%%%Unassigning self, following UI code makes my head hurt too much :)%%%

%%%Looking into this issue.%%%

%%%Looking into this issue.%%%

%%%Ok, issue is caused by starting Icon Preview render job from two places: from texture buttons for small icon preview and from properties panel in image editor for large icon of texture. This preview job is starting in suspended mode and if new instance of the same job is starting, suspended job will be totally stopped. This is normally for cases when you're changing different settings -- in this case you'd wouldn't want re-render be triggered on every slide change. But what we've have with brush preview is that two instances of this job were creating for large and small icon separately, but because of described policy only one icon was rendered. Can see several ways to resolve the issue:

  • Make job's owner icon rect instead of ID. But it'll lead to extra renderers created, so don't like this.
  • Render all icon sizes if one of icons was changed. It'll require minimal changes but will introduce slowdown in cases if large texture icon isn't needed (i.e. texture isn't used by any brushes). So also don't like this approach.
  • If suspended job is getting to be stopped, check if it was started for the same icon resolution and if not, that resolution will be also rendered in new job. So it'll be still minimal re-rendering happens, but in cases when job was started from two places for different icon sizes it'll work just fine.
    There's patch in attachments where third approach was implemented.
    Don't think i'll want such changes be commited so close to release..%%%
%%%Ok, issue is caused by starting Icon Preview render job from two places: from texture buttons for small icon preview and from properties panel in image editor for large icon of texture. This preview job is starting in suspended mode and if new instance of the same job is starting, suspended job will be totally stopped. This is normally for cases when you're changing different settings -- in this case you'd wouldn't want re-render be triggered on every slide change. But what we've have with brush preview is that two instances of this job were creating for large and small icon separately, but because of described policy only one icon was rendered. Can see several ways to resolve the issue: - Make job's owner icon rect instead of ID. But it'll lead to extra renderers created, so don't like this. - Render all icon sizes if one of icons was changed. It'll require minimal changes but will introduce slowdown in cases if large texture icon isn't needed (i.e. texture isn't used by any brushes). So also don't like this approach. - If suspended job is getting to be stopped, check if it was started for the same icon resolution and if not, that resolution will be also rendered in new job. So it'll be still minimal re-rendering happens, but in cases when job was started from two places for different icon sizes it'll work just fine. There's patch in attachments where third approach was implemented. Don't think i'll want such changes be commited so close to release..%%%

%%%From default blend:

  • In Textures panel, select Brush textures
  • Press New
  • Select Material textures
  • Click Browse button to show texture list

The small icon in the menu has not been updated. (Selecting the entry in the menu does then update the icon.)%%%

%%%From default blend: * In Textures panel, select Brush textures * Press New * Select Material textures * Click Browse button to show texture list The small icon in the menu has not been updated. (Selecting the entry in the menu does then update the icon.)%%%

%%%Managed to reproduce and fix issue. In fact, it wasn't so nice idea of always using large icons for search menus in commit 28779. Now it should behave properly.%%%

%%%Managed to reproduce and fix issue. In fact, it wasn't so nice idea of always using large icons for search menus in commit 28779. Now it should behave properly.%%%

%%%It was wrong patch attached. Attaching correct one.%%%

%%%It was wrong patch attached. Attaching correct one.%%%

%%%Fixed update of brush texture in sculpt mode.%%%

%%%Fixed update of brush texture in sculpt mode.%%%

%%%Patch looks ok to me, only suggestion from me is in interface_layout.c and interface_templates.c, it could use the ICON_SIZE_PREVIEW/ICON_SIZE_ICON constants there?%%%

%%%Patch looks ok to me, only suggestion from me is in interface_layout.c and interface_templates.c, it could use the ICON_SIZE_PREVIEW/ICON_SIZE_ICON constants there?%%%

%%%Fixed in svn rev44192. Thanks for the report, tests and review!%%%

%%%Fixed in svn rev44192. Thanks for the report, tests and review!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#25649
No description provided.